--- a/.conkyrc
+++ b/.conkyrc
@@ -23,7 +23,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-alignment top_right
+alignment bottom_right
 background no
 border_width 1
 cpu_avg_samples 2
@@ -35,9 +35,9 @@ draw_graph_borders yes
 draw_outline no
 draw_shades no
 use_xft yes
-xftfont DejaVu Sans Mono:size=12
+xftfont white rabbit:size=12
 gap_x 5
-gap_y 60
+gap_y 5
 minimum_size 5 5
 net_avg_samples 2
 no_buffers yes
@@ -55,7 +55,7 @@ show_graph_scale no
 show_graph_range no
 
 TEXT
-${scroll 16 $nodename - $sysname $kernel on $machine | }
+$nodename - $sysname $kernel on $machine
 $hr
 ${color grey}Uptime:$color $uptime
 ${color grey}Frequency (in MHz):$color $freq
