w00t! found a way to ignore the painfully annoying dirty submodules. hell yeah

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,4 @@
 [submodule ".vim/bundle/showmarks"]
 	path = .vim/bundle/showmarks
 	url = git://github.com/vim-scripts/ShowMarks.git
+        ignore = dirty
