Started using Vim plugin: minibufexpl; added mappings to vimrc that make it easy to switch windows

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,6 @@
 	path = .vim/bundle/showmarks
 	url = git://github.com/vim-scripts/ShowMarks.git
         ignore = dirty
+[submodule ".vim/bundle/minibufexpl"]
+	path = .vim/bundle/minibufexpl
+	url = git://github.com/techlivezheng/vim-plugin-minibufexpl.git
