New Vim plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,15 @@
 [submodule ".vim/bundle/minibufexpl"]
 	path = .vim/bundle/minibufexpl
 	url = git://github.com/techlivezheng/vim-plugin-minibufexpl.git
+[submodule ".vim/bundle/omnicppcompl"]
+	path = .vim/bundle/omnicppcompl
+	url = git://github.com/vim-scripts/OmniCppComplete.git
+[submodule ".vim/bundle/yankring"]
+	path = .vim/bundle/yankring
+	url = git://github.com/vim-scripts/YankRing.vim.git
+[submodule ".vim/bundle/tetris"]
+	path = .vim/bundle/tetris
+	url = git://github.com/vim-scripts/TeTrIs.vim.git
+[submodule ".vim/bundle/sokoban"]
+	path = .vim/bundle/sokoban
+	url = git://github.com/vim-scripts/sokoban.vim.git
