--- a/.gitmodules
+++ b/.gitmodules
@@ -90,3 +90,30 @@
 [submodule ".vim/bundle/molokai"]
 	path = .vim/bundle/molokai
 	url = https://github.com/tomasr/molokai
+[submodule ".vim/bundle/gentooish"]
+	path = .vim/bundle/gentooish
+	url = https://github.com/briancarper/gentooish.vim
+[submodule ".vim/bundle/inkpot"]
+	path = .vim/bundle/inkpot
+	url = https://github.com/ciaranm/inkpot
+[submodule ".vim/bundle/jellybeans"]
+	path = .vim/bundle/jellybeans
+	url = https://github.com/nanotech/jellybeans.vim
+[submodule ".vim/bundle/lettuce"]
+	path = .vim/bundle/lettuce
+	url = https://github.com/vim-scripts/lettuce.vim
+[submodule ".vim/bundle/liquidcarbon"]
+	path = .vim/bundle/liquidcarbon
+	url = https://github.com/vim-scripts/Liquid-Carbon
+[submodule ".vim/bundle/rdark"]
+	path = .vim/bundle/rdark
+	url = https://github.com/vim-scripts/rdark
+[submodule ".vim/bundle/solarized"]
+	path = .vim/bundle/solarized
+	url = https://github.com/altercation/vim-colors-solarized
+[submodule ".vim/bundle/sorcerer"]
+	path = .vim/bundle/sorcerer
+	url = https://github.com/vim-scripts/Sorcerer
+[submodule ".vim/bundle/werks"]
+	path = .vim/bundle/werks
+	url = https://github.com/vim-scripts/werks.vim
