vim: Massive commit, too big of a hurry to split; sorry future self :<

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@
 /.ssh/authorized_keys
 
 # Various vim files
-/.vim/backup/
-/.vim/view/
-/.vim/sessions/
-/.vim/undo/
+/.vim/bundle/
+/.vim/.backup/
+/.vim/.view/
+/.vim/.sessions/
+/.vim/.undo/
+/.vim/.tmp/
 /.vim/.viminfo
 /.vim/.NERDTreeBookmarks
 
