zsh: Add powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@
 #     (_)__/_/ /_/ /_/\__,_/_/|_(_)___/\____/_/ /_/_/
 #
 
+source '/usr/share/tmux/powerline.conf'
+
 ###
 ### Session Layout
 ###
