tmux: Pretty colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ unbind C-b
 set -g prefix C-e
 bind C-e send-prefix
 
+# I demand pretty colors
+set -g default-terminal "screen-256color"
+
 # Set number of scrollback lines
 set -g history-limit 5000
 
