tmux: Fix window indexing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,15 +13,6 @@
 source '/usr/share/tmux/powerline.conf'
 
 ###
-### Session Layout
-###
-
-new-session -d -c $HOME -s main
-new-window -d -n ssh-dz
-
-#new-session -d -c $HOME -s irc weechat
-
-###
 ### Options
 ###
 
@@ -47,6 +38,15 @@ setw -g pane-base-index 1
 
 # Automatic window renaming through tmux; manual rename will still override
 setw -g automatic-rename
+
+###
+### Session Layout
+###
+
+new-session -d -c $HOME -s main
+new-window -d -n ssh-dz
+
+new-session -d -c $HOME -s irc weechat
 
 ###
 ### Key-bindings
