Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,11 +3,27 @@
 #
 
 Host dz
-    User zeroknight
     HostName dimensionzero.net
     IdentityFile ~/.ssh/zeromaster.key
+    ForwardAgent yes
+    ForwardX11 yes
+
+Host zn zeronet
+    HostName zeronet.dimensionzero.net
+    IdentityFile ~/.ssh/zeromaster.key
+    ForwardAgent yes
+    ForwardX11 yes
+
+Host oh oht scrumble orange
+    HostName orangehattech.com
+    IdentityFile ~/.ssh/orangehattech.key
 
 Host github
     User git
     Hostname github.com
     IdentityFile ~/.ssh/github.key
+
+Host *
+    User zeroknight
+    ForwardAgent no
+    VerifyHostKeyDNS yes
