tmux: Have ssh-dz window automatically ssh to vps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ setw -g automatic-rename
 ###
 
 new-session -d -c $HOME -s main
-new-window -d -n ssh-dz
+new-window -d -n ssh-dz 'ssh dz'
 
 new-session -d -c $HOME -s irc weechat
 
