--- a/.ssh/config
+++ b/.ssh/config
@@ -6,7 +6,8 @@ Host dz
     HostName dimensionzero.net
     IdentityFile ~/.ssh/zeromaster.key
     ForwardAgent yes
-    ForwardX11 yes
+    # Headless vps
+    ForwardX11 no
 
 Host zn zeronet
     HostName zeronet.dimensionzero.net
@@ -27,3 +28,5 @@ Host *
     User zeroknight
     ForwardAgent no
     VerifyHostKeyDNS yes
+    ControlMaster auto
+    ControlPath /tmp/ssh_mux_zeroknight_%r@%h:%p
