--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
     grep = auto
 [core]
     excludesfile = ~/._gitignore
-    editor = gvim -f
+    editor = vim
     pager = less -S
 [alias]
     p = add --patch
