git: Switch `push.default` from simple to current

--- a/.gitconfig
+++ b/.gitconfig
@@ -33,6 +33,6 @@
     l = log --graph --full-history --all --color --pretty=format:"%x1b[31m%h%x09%x1b[32m%d%x1b[0m%x20%s"
     lv = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [push]
-    default = simple
+    default = current
 [init]
     templatedir = ~/.git_template
