--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,17 +27,26 @@ set -g default-terminal "screen-256color"
 # Set number of scrollback lines
 set -g history-limit 5000
 
-# Resize a window based on the smallest client actually viewing it, not just the
-# smallest one attached
-setw -g aggressive-resize on
+# Duration of status line messages and various indicators
+set -g display-time 1500
 
 # Zero-based indexing is great in programming; not so much in tmux when 0 is all
 # the way at the other end of the keyboard :p
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Automatically re-number other windows when one is closed
+set -g renumber-windows on
+
+# Resize a window based on the smallest client actually viewing it, not just the
+# smallest one attached
+setw -g aggressive-resize on
+
 # Automatic window renaming through tmux; manual rename will still override
 setw -g automatic-rename
+
+# Copy Mode
+setw -g mode-keys vi
 
 ###
 ### Session Layout
@@ -65,8 +74,6 @@ bind R source-file ~/.tmux.conf \; display-message "Config Reloaded!"
 ### Vim-style key-bindings
 ###
 
-# Copy Mode
-set -g mode-keys vi
 # v (or space?) to select
 bind -t vi-copy 'v' begin-selection
 # y to yank; send to primary and clipboard buffers
@@ -79,13 +86,11 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Switch Panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
-# Reize Panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+# Last Window (default overwritten by above)
+bind C-w last-window
+
