Giving Office Code Pro a trail run
Modified Source Code Pro with things like a slashed zero (<3), full line
through dollar sign, better braces, etc.

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,7 +1,8 @@
 # termite Configuration
 
 [options]
-font = Source Code Pro 9
+#font = Source Code Pro 9
+font = Office Code Pro 9
 
 # Molokai theme
 [colors]
