ssh: Add keepalive to config
Mostly beneficial for tunnels

--- a/.ssh/config
+++ b/.ssh/config
@@ -30,3 +30,4 @@ Host *
     VerifyHostKeyDNS yes
     ControlMaster auto
     ControlPath /tmp/ssh_mux_zeroknight_%r@%h:%p
+    ServerAliveInterval 120
