tmux: Use autossh for ssh-dz window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ setw -g mode-keys vi
 ###
 
 new-session -d -c $HOME -s main
-new-window -d -n ssh-dz 'ssh dz'
+new-window -d -n ssh-dz 'autossh -M 0 dz'
 
 new-session -d -c $HOME -s irc weechat
 
