--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@
 #     (_)__/_/ /_/ /_/\__,_/_/|_(_)___/\____/_/ /_/_/
 #
 
-source '/usr/share/tmux/powerline.conf'
+source '/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf'
 
 ###
 ### Options
