git: Move template to .config/git
Allows for different templates as well, all organized in one place

--- a/.config/git/config
+++ b/.config/git/config
@@ -20,7 +20,7 @@
 [push]
     default = current
 [init]
-    templatedir = ~/.git_template
+    templatedir = ~/.config/git/template_default
 [pretty]
     single = "format:%C(green)%<|(13)%h%C(reset) %s%C(bold)%C(magenta)%d%C(reset) %C(yellow)[%cd] %C(cyan)<%aN %aE>%C(reset)"
     medinfo = "format:%C(bold)Commit:%C(reset) %C(green)%H%C(bold)%C(magenta)%d%C(reset)%n%C(bold)Author:%C(reset) %C(cyan)%aN <%aE>%C(reset) - %C(yellow)%ad (%ar)%C(reset)%n%GG%w(0,2,2)%+B"
