git: Tweak alias names
  - setup: Given git's nature to ignore aliases for builtin commands
    with the same name, this is now a fallback for when git-extras is
    not available
  - auto-rm is a more fitting name

--- a/.config/git/config
+++ b/.config/git/config
@@ -8,9 +8,9 @@
     editor = vim
     pager = less -S
 [alias]
-    this = !git init && git add . && git commit -m 'Initial Commit'
+    setup = !git init && git add . && git commit -m 'Initial Commit'
     ctags = !.git/hooks/ctags
-    rmdel = !git ls-files -z --deleted | xargs -0 git rm
+    auto-rm = !git ls-files -z --deleted | xargs -0 git rm
 [push]
     default = current
 [init]
