--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,25 +6,43 @@ cursor_blink = on
 dynamic_title = on
 mouse_autohide = on
 
-# OneDark Theme
+# one dark
 [colors]
-foreground      = #9ba2b3
-foreground_bold = #9ba2b3
-cursor          = #9ba2b3
-background      = #1e2127
-color0          = #1e2127
-color1          = #d65562
-color2          = #88b966
-color3          = #deb468
-color4          = #519deb
-color5          = #b85dd5
-color6          = #48a8b5
-color7          = #9ba2b1
-color8          = #2f3441
-color9          = #ae3b36
-color10         = #88b966
-color11         = #c58853
-color12         = #519deb
-color13         = #b85dd5
-color14         = #48a8b5
-color15         = #4a535d
+
+# special
+foreground      = #abb2bf
+foreground_bold = #abb2bf
+cursor          =
+background      = #282c34
+
+# black
+color0  = #282c34
+color8  = #5c6370
+
+# red
+color1  = #e06c75
+color9  = #be5046
+
+# green
+color2  = #98c379
+color10 = #7a9f60
+
+# yellow
+color3  = #e5c07b
+color11 = #d19a66
+
+# blue
+color4  = #61afef
+color12 = #3b84c0
+
+# magenta
+color5  = #c678dd
+color13 = #9a52af
+
+# cyan
+color6  = #56b6c2
+color14 = #3c909b
+
+# white
+color7  = #abb2bf
+color15 = #828997
