vim: Use 24-bit colors
Note: tmux using xterm-256color is a temporary workaround to make Vim
show the proper colors inside tmux. This might be a non-issue when we
switch to neovim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,9 @@ unbind C-b
 set -g prefix C-e
 bind C-e send-prefix
 
-# I demand pretty colors
-set -g default-terminal "screen-256color"
+# 24-bit colors
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # Set number of scrollback lines
 set -g history-limit 5000
