tmux: Minor overhaul
  - Customized statusline and the like; Closes #11
  - Added, removed and tweaked various options and binds
  - Tweaked formatting in various places
  - Moved session layouts to their own file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,24 @@
-#   _____                   __ __       _       __    __ _
-#  /__  /  ___  _________  / //_/____  (_)___ _/ /_  / /( )_____
-#    / /  / _ \/ ___/ __ \/ ,<  / __ \/ / __ `/ __ \/ __/// ___/
-#   / /__/  __/ /  / /_/ / /| |/ / / / / /_/ / / / / /_  (__  )
-#  /____/\___/_/   \____/_/ |_/_/ /_/_/\__, /_/ /_/\__/ /____/
-#          __                         /____/          ____
-#         / /_____ ___  __  ___  __ _________  ____  / __/
-#        / __/ __ `__ \/ / / / |/_// ___/ __ \/ __ \/ /_
-#      _/ /_/ / / / / / /_/ />  <_/ /__/ /_/ / / / / __/
-#     (_)__/_/ /_/ /_/\__,_/_/|_(_)___/\____/_/ /_/_/
+#
+# ZeroKnight's .tmux.conf
 #
 
-###
 ### Options
-###
 
-# Experimental prefix key
-unbind C-b
-set -g prefix C-e
-bind C-e send-prefix
+set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 
 # 24-bit colors
-set -g default-terminal "xterm-256color"
+set -g default-terminal 'xterm-256color'
 set -ga terminal-overrides ',xterm-256color:Tc'
+
+# Disable Escape-timeout
+set -g escape-time 0
 
 # Set number of scrollback lines
 set -g history-limit 5000
 
 # Duration of status line messages and various indicators
-set -g display-time 1500
+set -g display-time 2000
+set -g display-panes-time 2000
 
 # Zero-based indexing is great in programming; not so much in tmux when 0 is all
 # the way at the other end of the keyboard :p
@@ -42,47 +33,32 @@ set -g renumber-windows on
 setw -g aggressive-resize on
 
 # Automatic window renaming through tmux; manual rename will still override
-setw -g automatic-rename
+setw -g automatic-rename on
+
+# Set terminal title
+set -g set-titles on
+set -g set-titles-string 'tmux #S:#W - #{pane_title}'
 
 # Copy Mode
 setw -g mode-keys vi
 
-###
-### Session Layout
-###
+# Fun lock screen
+set -g lock-command 'nice -n19 cmatrix -bs'
 
-new-session -d -c $HOME -s main
-new-window -d -n ssh-dz 'autossh -M 0 dz'
-
-new-session -d -c $HOME -s irc weechat
-
-###
 ### Key-bindings
-###
 
 # Better split bindings
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind '%'
+bind | split-window -h ; unbind '"'
+bind - split-window -v ; unbind '%'
 
 # Reload Configuration
-bind R source-file ~/.tmux.conf \; display-message "Config Reloaded!"
+bind R source-file ~/.tmux.conf \; display-message 'Config Reloaded!'
 
-###
-### Vim-style key-bindings
-###
+# Create new window with name
+bind C command-prompt -p 'New window:' "new-window -n '%%'"
 
-# v (or space?) to select
-bind -t vi-copy 'v' begin-selection
-# y to yank; send to primary and clipboard buffers
-bind -t vi-copy 'y' copy-pipe "xsel -i -o -p | xsel -i -b"
-# p to paste (or shift-insert as it's in both buffers)
-#bind P paste-buffer
-
-# Cycle Windows
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# Open a pane with glances
+bind '~' split-window 'exec glances'
 
 # Switch Panes
 bind -r h select-pane -L
@@ -91,5 +67,46 @@ bind -r k select-pane -U
 bind -r l select-pane -R
 
 # Last Window (default overwritten by above)
-bind C-w last-window
+bind C-l last-window
+
+bind 'M-m' show-messages
+
+# Copy-Mode
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-pipe 'xsel -i -o -p | xsel -i -b'
+
+### Theme Configuration
+
+set -g status-interval 10
+set -g status-justify 'centre'
+
+# Left/Right Status Line and Messages
+set -g status-style 'fg=white,bg=#2C3341'
+set -g status-left " #[fg=yellow]#h#[fg=default] :: #[fg=#{?client_prefix,magenta,green}]#[bold]#S#[nobold]#{?session_grouped,#[fg=default].#[fg=cyan]#{session_group},} #[fg=cyan]╱#[fg=default] "
+set -g status-left-length 50
+set -g status-right "#[fg=cyan]╱#[fg=default] #(~/.config/tmux/loadavg) :: #[fg=blue]Up #(uptime | cut -d ' ' -f 4-5 | tr -d ',') #[fg=cyan]╱#[fg=blue] %a %b %d • %H:%M#[fg=default]"
+set -g status-right-length 70
+set -g message-style 'fg=#2C3341,bg=blue'
+set -g message-command-style 'fg=#2C3341,bg=green'
+
+# Windows
+setw -g window-status-format ' #[fg=colour011]#I:#[fg=#{?window_bell_flag,colour009,colour015}]#W#[fg=colour011]#F#[fg=default] '
+setw -g window-status-current-format ' #[fg=cyan]#I:#[fg=default]#W#[fg=cyan]#F#[fg=default] '
+setw -g window-status-style 'fg=default,bg=#323A4A'
+setw -g window-status-current-style 'fg=default,bg=#3C4759'
+setw -g window-status-bell-style 'bg=default'
+
+# Panes
+set -g display-panes-active-colour 'magenta'
+setw -g pane-border-style 'fg=green'
+setw -g pane-active-border-style 'fg=magenta'
+
+# Sets the style of the line-counter selections in copy-mode
+setw -g mode-style 'fg=black,bg=magenta'
+
+set -g clock-mode-colour 'blue'
+
+### Load default sessions
+
+source -q $HOME/.config/tmux/sessions.tmux
 
