tmux: Update settings to reflect 2.5 changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,14 @@
 set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 
 # 24-bit colors
-set -g default-terminal 'xterm-256color'
-set -ga terminal-overrides ',xterm-256color:Tc'
+# Change to tmux-256color whenever Vim stops sucking at 24-bit color (or we
+# switch to nvim)
+# set -s default-terminal 'tmux-256color'
+set -s default-terminal 'xterm-256color'
+set -sa terminal-overrides ',xterm-256color:Tc'
 
 # Disable Escape-timeout
-set -g escape-time 0
+set -s escape-time 0
 
 # Set number of scrollback lines
 set -g history-limit 5000
@@ -72,8 +75,8 @@ bind C-l last-window
 bind 'M-m' show-messages
 
 # Copy-Mode
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-pipe 'xsel -i -o -p | xsel -i -b'
+bind -T copy-mode-vi 'v' begin-selection
+bind -T copy-mode-vi 'y' copy-pipe 'xsel -i -o -p | xsel -i -b'
 
 ### Theme Configuration
 
