--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,7 @@
 set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 
 # 24-bit colors
-# Change to tmux-256color whenever Vim stops sucking at 24-bit color (or we
-# switch to nvim)
-# set -s default-terminal 'tmux-256color'
-set -s default-terminal 'xterm-256color'
+set -s default-terminal 'tmux-256color'
 set -sa terminal-overrides ',xterm-256color:Tc'
 
 # Disable Escape-timeout
