tmux: Disable this keybind for now
It conflicts with a default keybind to show-messages; reassign later.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind R source-file ~/.tmux.conf \; display-message 'Config Reloaded!'
 bind C command-prompt -p 'New window:' "new-window -n '%%'"
 
 # Open a pane with glances
-bind '~' split-window 'exec glances'
+# bind '~' split-window 'exec glances'
 
 # Switch Panes
 bind -r h select-pane -L
