ssh: Add prpc connection to config

--- a/.ssh/config
+++ b/.ssh/config
@@ -24,6 +24,11 @@ Host github
     Hostname github.com
     IdentityFile ~/.ssh/github.key
 
+Host prpc
+    Hostname 104.237.203.33
+    IdentityFile ~/.ssh/zeromaster.key
+    ForwardAgent yes
+
 Host *
     User zeroknight
     ForwardAgent no
