tmux: Use short form

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ setw -g automatic-rename on
 
 # Set terminal title
 set -g set-titles on
-set -g set-titles-string 'tmux #S:#W - #{pane_title}'
+set -g set-titles-string 'tmux #S:#W | #T'
 
 # Copy Mode
 setw -g mode-keys vi
