git: Set core.editor to nvim
Wondering if git gracefully handles when the chosen editor isn't found.
May end up just unsetting this entirely and seeing if it uses $EDITOR or
$VISUAL

--- a/.config/git/config
+++ b/.config/git/config
@@ -5,7 +5,7 @@
 [color]
     ui = auto
 [core]
-    editor = vim
+    editor = nvim
     pager = less -S
 [alias]
     setup = !git init && git add . && git commit -m 'Initial Commit'
