ssh: Add support for "local" config options
config will attempt to source 'local_config', if available. Handy for
defining LAN hosts and the like.

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,8 @@
 # Alex "ZeroKnight" George SSH Configuration file
 #
 
+Include local_config
+
 Host dz
     HostName dimensionzero.net
     IdentityFile ~/.ssh/zeromaster.key
