tmux: Fix terminal settings
default-terminal should always be set to either 'tmux*' or 'screen*',
with an appropriate TERM set outside tmux itself.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@
 set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 
 # 24-bit colors
-set -s default-terminal 'xterm-kitty'
-set -sa terminal-overrides ',xterm-kitty:Tc'
+set -s default-terminal 'tmux-256color'
+set -sa terminal-overrides ',xterm-kitty:Tc,xterm-termite:Tc'
 
 # Disable Escape-timeout
 set -s escape-time 0
