--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 
 # 24-bit colors
 set -s default-terminal 'tmux-256color'
-set -sa terminal-overrides ',xterm-kitty:Tc,xterm-termite:Tc'
+set -sa terminal-overrides ',xterm-kitty:Tc,xterm-termite:Tc,xterm-256color:Tc'
 
 # Disable Escape-timeout
 set -s escape-time 0
