tmux: Fix status widgets

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ set -g status-justify 'centre'
 set -g status-style 'fg=white,bg=#2C3341'
 set -g status-left " #[fg=yellow]#h#[fg=default] :: #[fg=#{?client_prefix,magenta,green}]#[bold]#S#[nobold]#{?session_grouped,#[fg=default].#[fg=cyan]#{session_group},} #[fg=cyan]╱#[fg=default] "
 set -g status-left-length 50
-set -g status-right "#[fg=cyan]╱#[fg=default] #(~/.config/tmux/loadavg) :: #[fg=blue]Up #(uptime | cut -d ' ' -f 4-5 | tr -d ',') #[fg=cyan]╱#[fg=blue] %a %b %d • %H:%M#[fg=default]"
+set -g status-right "#[fg=cyan]╱#[fg=default] #(~/.config/tmux/loadavg) :: #[fg=blue]Up #(uptime | awk '{print $3, $4}') #[fg=cyan]╱#[fg=blue] %a %b %d • %H:%M#[fg=default]"
 set -g status-right-length 70
 set -g message-style 'fg=#2C3341,bg=blue'
 set -g message-command-style 'fg=#2C3341,bg=green'
