tmux: Enable undercurls

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,10 @@ set -g prefix C-e ; bind C-e send-prefix ; unbind C-b
 set -s default-terminal 'tmux-256color'
 set -sa terminal-overrides ',xterm-kitty:Tc,xterm-termite:Tc,xterm-256color:Tc'
 
+# Undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # Disable Escape-timeout
 set -s escape-time 0
 
