Add kitty configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,8 +94,8 @@ set -g message-style 'fg=#2C3341,bg=blue'
 set -g message-command-style 'fg=#2C3341,bg=green'
 
 # Windows
-setw -g window-status-format ' #[fg=colour011]#I:#[fg=#{?window_bell_flag,colour009,colour015}]#W#[fg=colour011]#F#[fg=default] '
-setw -g window-status-current-format ' #[fg=cyan]#I:#[fg=default]#W#[fg=cyan]#F#[fg=default] '
+setw -g window-status-format ' #[fg=colour011]#I:#[fg=#{?window_bell_flag,colour009,default}]#W#[fg=colour011]#F#[fg=default] '
+setw -g window-status-current-format ' #[fg=cyan]#I:#[fg=colour015]#W#[fg=cyan]#F#[fg=default] '
 setw -g window-status-style 'fg=default,bg=#323A4A'
 setw -g window-status-current-style 'fg=default,bg=#3C4759'
 setw -g window-status-bell-style 'bg=default'
