--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ fonts/Iosevka/private-build-plans.toml
 ### Vim
 /.config/nvim/en.utf-8.add.spl
 /.config/nvim/plugin/packer_compiled.vim
+/.config/nvim/plugin/packer_compiled.lua
 
 ### Misc
 __pycache__/
