tmux: Enable focus events and extkeys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,10 @@ set -g renumber-windows on
 # smallest one attached
 setw -g aggressive-resize on
 
+# Enable focus events and extended keys
+set -g focus-events on
+set -g extended-keys on
+
 # Automatic window renaming through tmux; manual rename will still override
 setw -g automatic-rename on
 
