zsh: Replace fasd with z.lua
z.lua is a Lua variant of rupa/z. It's extremely fast, though it doesn't
operate on files like fasd does. Admittedly, I didn't really use the
file feature of fasd much, so I'm not sure I'll miss it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "syntax-highlighting"]
 	path = .config/zsh/modules/syntax-highlighting/external
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule ".config/zsh/modules/z/external"]
+	path = .config/zsh/modules/z/external
+	url = https://github.com/skywind3000/z.lua
