kitty: Update config
- Add open action for images
- More tentative background image tweaks

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -47,6 +47,8 @@ initial_window_height 28c
 # Show window size in cells while resizing
 resize_draw_strategy size
 
+resize_in_steps yes
+
 inactive_text_alpha 1.0
 
 # Background {{{1
@@ -55,10 +57,10 @@ background_opacity 1.0
 dynamic_background_opacity yes
 
 # TODO: experiment
-background_image none
-background_image_layout tiled
-background_image_linear no
-background_tint 0.6
+background_image bg.png
+background_image_layout scaled
+background_image_linear yes
+background_tint 0.85
 
 # Keybinds {{{1
 
